--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/packages.config
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="CSLA-Core" version="4.5.10" targetFramework="net45" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
 </packages>
