--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -47,11 +47,12 @@
   <ItemGroup>
     <Compile Include="Context\IPersistenceContext.cs" />
     <Compile Include="Context\IPersistenceContextFactory.cs" />
+    <Compile Include="Dto\PageDto.cs" />
+    <Compile Include="Dto\SiteMapPageDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IPageRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dto\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
