--- a/src/ComplexCommerce/ComplexCommerce/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Web.config
@@ -17,6 +17,12 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Csla Settings -->
+    <add key="CslaAuthentication" value="Csla" />
+    <!--<add key="PersistenceContextType" value="Mainland.Commerce.DalEf.EntityFrameworkObjectContext, Mainland.Commerce.DalEf"/>
+		<add key="PersistenceDetailsType" value="Mainland.Commerce.DalEf.PersistenceDetails, Mainland.Commerce.DalEf"/>-->
+    <add key="PersistenceContextType" value="ComplexCommerce.Data.SqlServer.EntityFrameworkObjectContext, Mainland.Commerce.DalEf" />
+    <add key="PersistenceDetailsType" value="ComplexCommerce.Data.SqlServer.PersistenceDetails, Mainland.Commerce.DalEf" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
