--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -47,12 +47,20 @@
   <ItemGroup>
     <Compile Include="Context\IPersistenceContext.cs" />
     <Compile Include="Context\IPersistenceContextFactory.cs" />
+    <Compile Include="Context\IPersistenceDetails.cs" />
+    <Compile Include="Context\PersistenceContextFactory.cs" />
     <Compile Include="Dto\PageDto.cs" />
     <Compile Include="Dto\SiteMapPageDto.cs" />
+    <Compile Include="IDataInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ComplexCommerce.Shared\ComplexCommerce.Shared.csproj">
+      <Project>{504a88ab-4631-411b-83b0-1e40bf4bba97}</Project>
+      <Name>ComplexCommerce.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
