--- a/src/ComplexCommerce/ComplexCommerce.Web.Mvc/packages.config
+++ b/src/ComplexCommerce/ComplexCommerce.Web.Mvc/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="CSLA-ASP.NET-MVC" version="4.5.10" targetFramework="net45" />
   <package id="CSLA-Core" version="4.5.10" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
