--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteMapPageList.cs" />
     <Compile Include="SiteMapPageTree.cs" />
+    <Compile Include="TenantTypeEnum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
