--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
@@ -54,8 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context\EntityFrameworkObjectContext.cs" />
     <Compile Include="Context\IEntityFrameworkObjectContext.cs" />
     <Compile Include="Context\IObjectContextManager.cs" />
+    <Compile Include="Context\ObjectContextManager.cs" />
     <Compile Include="Context\PersistenceDetails.cs" />
     <Compile Include="DataInitializer.cs" />
     <Compile Include="Model\Category.cs">
@@ -75,7 +77,7 @@
     <Compile Include="Model\ComplexCommerce.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ComplexCommerce.tt</DependentUpon>
+      <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\ComplexCommerce.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -114,6 +116,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
+    <Compile Include="Repositories\TenantRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model\ComplexCommerce.edmx">
