--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -51,9 +51,11 @@
     <Compile Include="Context\PersistenceContextFactory.cs" />
     <Compile Include="Dto\PageDto.cs" />
     <Compile Include="Dto\SiteMapPageDto.cs" />
+    <Compile Include="Dto\TenantDto.cs" />
     <Compile Include="IDataInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
+    <Compile Include="Repositories\ITenantRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ComplexCommerce.Shared\ComplexCommerce.Shared.csproj">
