--- a/src/ComplexCommerce/ComplexCommerce.Web/ComplexCommerce.Web.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web/ComplexCommerce.Web.csproj
@@ -49,8 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IContextUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UrlParser.cs" />
+    <Compile Include="ContextUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
