Modified Entity Framework mocking so it uses DbContext and DbSet rather than ObjectContext and ObjectSet because seeding cannot work with ObjectContext.

--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
@@ -86,18 +86,22 @@
     <Compile Include="Model\ComplexCommerceMock.cs">
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\ComplexCommerceMock.ObjectContext.cs">
+    <Compile Include="Model\ComplexCommerceMock.DbContext.cs">
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\ComplexCommerceMock.ObjectSet.cs">
+    <Compile Include="Model\ComplexCommerceMock.DbSet.cs">
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\DbContext.cs" />
+    <Compile Include="Model\DbContextMockBase.cs" />
+    <Compile Include="Model\MockDbSet.cs" />
     <Compile Include="Model\IComplexCommerce.cs">
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\IObjectContext.cs">
+    <Compile Include="Model\IDbContext.cs">
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\IDbContext1.cs" />
     <Compile Include="Model\Page.cs">
       <DependentUpon>ComplexCommerce.tt</DependentUpon>
     </Compile>
