--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
@@ -75,6 +75,8 @@
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\ComplexCommerce.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\ComplexCommerce.Designer.cs">
