--- a/src/ComplexCommerce/ComplexCommerce.Web/ComplexCommerce.Web.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web/ComplexCommerce.Web.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HttpContextFactory.cs" />
     <Compile Include="IContextUtilities.cs" />
+    <Compile Include="IHttpContextFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ContextUtilities.cs" />
   </ItemGroup>
