Added CategoryProductList (Products) to Category.

--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Caching\RouteUrlPageListCache.cs" />
     <Compile Include="Caching\SingletonObjectCache.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="CategoryProductInfo.cs" />
+    <Compile Include="CategoryProductList.cs" />
     <Compile Include="ContentTypeEnum.cs" />
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Context\IApplicationContext.cs" />
