--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CategoryRepository.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\TenantRepository.cs" />
   </ItemGroup>
   <ItemGroup>
