--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Context\PersistenceContextFactory.cs" />
     <Compile Include="DataNotFoundException.cs" />
     <Compile Include="Dto\CategoryDto.cs" />
+    <Compile Include="Dto\CategoryProductDto.cs" />
     <Compile Include="Dto\PageDto.cs" />
     <Compile Include="Dto\SiteMapPageDto.cs" />
     <Compile Include="Dto\TenantDto.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ICategoryRepository.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
+    <Compile Include="Repositories\IProductRepository.cs" />
     <Compile Include="Repositories\ITenantRepository.cs" />
   </ItemGroup>
   <ItemGroup>
