Added ProductRoute and reworked caching so the key is passed through the interface.

--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Dto\CategoryDto.cs" />
     <Compile Include="Dto\CategoryProductDto.cs" />
     <Compile Include="Dto\PageDto.cs" />
+    <Compile Include="Dto\RouteUrlProductDto.cs" />
     <Compile Include="Dto\SiteMapPageDto.cs" />
     <Compile Include="Dto\TenantDto.cs" />
     <Compile Include="IDataInitializer.cs" />
