--- a/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
@@ -80,6 +80,7 @@
     <Compile Include="DI\InjectableControllerFactory.cs" />
     <Compile Include="LocalizedModelBinder.cs" />
     <Compile Include="PageRoute.cs" />
+    <Compile Include="ProductRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
