--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -48,11 +48,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caching\CachePolicy.cs" />
-    <Compile Include="Caching\GenericObjectCache.cs" />
+    <Compile Include="Caching\IMicroObjectCache.cs" />
+    <Compile Include="Caching\MicroObjectCache.cs" />
     <Compile Include="Caching\ICachePolicy.cs" />
+    <Compile Include="Caching\IRouteUrlPageListCacheFactory.cs" />
     <Compile Include="Caching\ISingletonObjectCache.cs" />
     <Compile Include="Caching\LazyLock.cs" />
     <Compile Include="Caching\RouteUrlPageListCache.cs" />
+    <Compile Include="Caching\RouteUrlPageListCacheFactory.cs" />
     <Compile Include="Caching\SingletonObjectCache.cs" />
     <Compile Include="Category.cs" />
     <Compile Include="CategoryProductInfo.cs" />
@@ -61,9 +64,12 @@
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Context\IApplicationContext.cs" />
     <Compile Include="GetCachedRouteUrlPageListCommand.cs" />
+    <Compile Include="GetCachedRouteUrlProductListCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteUrlPageInfo.cs" />
     <Compile Include="RouteUrlPageList.cs" />
+    <Compile Include="RouteUrlProductInfo.cs" />
+    <Compile Include="RouteUrlProductList.cs" />
     <Compile Include="SiteMapPageList.cs" />
     <Compile Include="SiteMapPageTree.cs" />
     <Compile Include="Tenant.cs" />
