--- a/src/ComplexCommerce/ComplexCommerce/ComplexCommerce.csproj
+++ b/src/ComplexCommerce/ComplexCommerce/ComplexCommerce.csproj
@@ -194,6 +194,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="PageRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -310,6 +311,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Home\Redirect301.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
