Refactored routing redirect into base class RedirectRouteBase. Created LowerCaseRedirectRoute and TrailingSlashRedirectRoute for SEO.

--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -74,6 +74,7 @@
     <Compile Include="SiteMapPageTree.cs" />
     <Compile Include="Tenant.cs" />
     <Compile Include="TenantTypeEnum.cs" />
+    <Compile Include="Text\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
