--- a/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
@@ -78,10 +78,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DI\InjectableControllerFactory.cs" />
+    <Compile Include="DefaultLocaleRedirectRoute.cs" />
     <Compile Include="LocalizedModelBinder.cs" />
+    <Compile Include="LowerCaseRedirectRoute.cs" />
     <Compile Include="PageRoute.cs" />
     <Compile Include="ProductRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedirectRouteBase.cs" />
+    <Compile Include="TrailingSlashRedirectRoute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
