Added Csla business rules to handle formatting the RouteUrl properly that is retrieved from the database so it can be matched exactly to HttpContext.Request.Path.

--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -70,6 +70,9 @@
     <Compile Include="RouteUrlPageList.cs" />
     <Compile Include="RouteUrlProductInfo.cs" />
     <Compile Include="RouteUrlProductList.cs" />
+    <Compile Include="Rules\UrlPathLeadingSlashRule.cs" />
+    <Compile Include="Rules\UrlPathLocaleRule.cs" />
+    <Compile Include="Rules\UrlPathTrailingSlashRule.cs" />
     <Compile Include="SiteMapPageList.cs" />
     <Compile Include="SiteMapPageTree.cs" />
     <Compile Include="Tenant.cs" />
