Added Csla rule to build path for the product. Added VirtualPath property to RouteUrlPageInfo and RouteUrlProductInfo that returns the path without the leading or trailing slashes. Made ProductRoute conditional based on tenant type.

--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -72,6 +72,7 @@
     <Compile Include="RouteUrlProductList.cs" />
     <Compile Include="Rules\UrlPathLeadingSlashRule.cs" />
     <Compile Include="Rules\UrlPathLocaleRule.cs" />
+    <Compile Include="Rules\UrlPathProductRule.cs" />
     <Compile Include="Rules\UrlPathTrailingSlashRule.cs" />
     <Compile Include="SiteMapPageList.cs" />
     <Compile Include="SiteMapPageTree.cs" />
