Added SiteMapProductList to SiteMapTree to represent the products and their relative positions in the hierarchy. Decoupled DTO objects between RouteUrl lists and SiteMap lists.

--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Rules\UrlPathTrailingSlashRule.cs" />
     <Compile Include="SiteMapPageList.cs" />
     <Compile Include="SiteMapPageTree.cs" />
+    <Compile Include="SiteMapProductInfo.cs" />
+    <Compile Include="SiteMapProductList.cs" />
     <Compile Include="Tenant.cs" />
     <Compile Include="TenantTypeEnum.cs" />
     <Compile Include="Text\StringExtensions.cs" />
