--- a/src/ComplexCommerce/ComplexCommerce/Views/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Views/Web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+				<add namespace="MvcSiteMapProvider.Web.Html"/>
+				<add namespace="MvcSiteMapProvider.Web.Html.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
