Added latest version of MvcSiteMapProvider including the new webactivator functionality.

--- a/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web.Mvc/ComplexCommerce.Web.Mvc.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routing\RouteUtilities.cs" />
     <Compile Include="Routing\TrailingSlashRedirectRoute.cs" />
+    <Compile Include="SiteMapProvider\VisibilityProvider.cs" />
     <Compile Include="SiteMapProvider\SiteMapBuilder.cs" />
     <Compile Include="SiteMapProvider\SiteMapCacheKeyGenerator.cs" />
   </ItemGroup>
