--- a/src/ComplexCommerce/ComplexCommerce/Web.config
+++ b/src/ComplexCommerce/ComplexCommerce/Web.config
@@ -17,12 +17,13 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		
+		<!-- MvcSiteMapProvider Settings -->
+		<add key="MvcSiteMapProvider_UseExternalDIContainer" value="true"/>
     <!-- Csla Settings -->
     <add key="CslaAuthentication" value="Csla" />
-    <!--<add key="PersistenceContextType" value="Mainland.Commerce.DalEf.EntityFrameworkObjectContext, Mainland.Commerce.DalEf"/>
-		<add key="PersistenceDetailsType" value="Mainland.Commerce.DalEf.PersistenceDetails, Mainland.Commerce.DalEf"/>-->
-    <add key="PersistenceContextType" value="ComplexCommerce.Data.SqlServer.EntityFrameworkObjectContext, Mainland.Commerce.DalEf" />
-    <add key="PersistenceDetailsType" value="ComplexCommerce.Data.SqlServer.PersistenceDetails, Mainland.Commerce.DalEf" />
+    <add key="PersistenceContextType" value="ComplexCommerce.Data.SqlServer.Context.EntityFrameworkObjectContext, ComplexCommerce.Data.SqlServer" />
+    <add key="PersistenceDetailsType" value="ComplexCommerce.Data.SqlServer.Context.PersistenceDetails, ComplexCommerce.Data.SqlServer" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -39,6 +40,8 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+				<add namespace="MvcSiteMapProvider.Web.Html"/>
+				<add namespace="MvcSiteMapProvider.Web.Html.Models"/>
       </namespaces>
     </pages>
   </system.web>
