Created DbConfig class to manage database initialization steps at application start. Moved request start code to TenantInitialzier and LocaleInitializer classes.

--- a/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data.SqlServer/ComplexCommerce.Data.SqlServer.csproj
@@ -87,7 +87,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ComplexCommerce.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Model\ComplexCommerceInitializer.cs" />
+    <Compile Include="Model\ComplexCommerceSeeder.cs" />
     <Compile Include="Model\ComplexCommerceMock.cs">
       <DependentUpon>ComplexCommerce.Context.tt</DependentUpon>
     </Compile>
