--- a/src/ComplexCommerce/ComplexCommerce.Web/ComplexCommerce.Web.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Web/ComplexCommerce.Web.csproj
@@ -52,8 +52,10 @@
     <Compile Include="HttpContextFactory.cs" />
     <Compile Include="IContextUtilities.cs" />
     <Compile Include="IHttpContextFactory.cs" />
+    <Compile Include="LocaleInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ContextUtilities.cs" />
+    <Compile Include="TenantInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
