Changed ProductXTenantLocaleId to CategoryXProductXTenantLocaleId for referencing products to enable putting products on multiple URLs.

--- a/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Data/ComplexCommerce.Data.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DataNotFoundException.cs" />
     <Compile Include="Dto\CategoryDto.cs" />
     <Compile Include="Dto\CategoryProductDto.cs" />
+    <Compile Include="Dto\ProductCategoryDto.cs" />
     <Compile Include="Dto\ProductDto.cs" />
     <Compile Include="Dto\RouteUrlPageDto.cs" />
     <Compile Include="Dto\RouteUrlProductDto.cs" />
