--- a/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
+++ b/src/ComplexCommerce/ComplexCommerce.Business/ComplexCommerce.Business.csproj
@@ -66,6 +66,8 @@
     <Compile Include="GetCachedRouteUrlPageListCommand.cs" />
     <Compile Include="GetCachedRouteUrlProductListCommand.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductCategoryInfo.cs" />
+    <Compile Include="ProductCategoryList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteUrlPageInfo.cs" />
     <Compile Include="RouteUrlPageList.cs" />
