--- a/src/ComplexCommerce/ComplexCommerce/packages.config
+++ b/src/ComplexCommerce/ComplexCommerce/packages.config
@@ -31,5 +31,6 @@
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
